
					The Legend of Eiwar!

		- A new game mode was added! You can now play with multiple of your characters against the computer!
		- The UI has not be rewamped completely, but certain elements have been significantly improved!
		- The bug with text being out of place has been fixed.

	- Monsters:
		- Monster AI's were modified to take into account how many players it is battling against.

	- Classes:
		-Thief: "Copycat" was removed and replaced with "Poisoned Blade":
			- Poisoned Blade: "Deals 130% of the Thiefs Attack and 65% of his Agility in damage."
			- "Borrow Weapon" was changed: "The Thief uses the best attack of his allies together with 
			  his own, dealing 85% (was 65%) of their combined damage."
		
_________________________________________________________________________________________________________
Version 0.1.3.16 (20/11-2013):

	NOTICE: I am entering a busy exam period and I also plan to rework the entire UI to be more smooth 
	        and easier to work with. This means there wont be any new features added to the game in the
			near future, however the game will be named and have a better look once I am done with the
			UI overhauling.

			Thank you for your patience :)
_________________________________________________________________________________________________________
Version 0.1.3.15 (20/11-2013):

	- General:
		- Made some tweaks to the stats given to Grand items, so they will receive less stats 
		  on average than before.
		- Changed the way Epochal items where awarded:
			- The maximum item level is the level of the monster the character was fighting.
			- The minimum item level is 5 levels below that monster.
		- Fixed a bug, causing character with high Speed rating to gain more turnpoints than he should be able to.
		- Speed was changed in terms of what percentages grant extra turnpoints:
			- 0+ % Speed gives the character a chance to earn 1 extra turnpoint.