@@ -1,7 +1,7 @@
 ﻿//------------------------------------------------------------------------------
 // <auto-generated>
 //     This code was generated by a tool.
-//     Runtime Version:4.0.30319.18063
+//     Runtime Version:4.0.30319.18444
 //
 //     Changes to this file may cause incorrect behavior and will be lost if
 //     the code is regenerated.
@@ -142,7 +142,7 @@ namespace RPG.Properties {
         }
         
         /// <summary>
-        ///   Looks up a localized string similar to Deals 20% of the Caretakers maximum health in damage to the target..
+        ///   Looks up a localized string similar to Deals 25% of the Caretakers maximum health in damage to the target..
         /// </summary>
         internal static string AbilitiesDescriptionCaretakerBodySlam {
             get {
@@ -394,7 +394,7 @@ namespace RPG.Properties {
         }
         
         /// <summary>
-        ///   Looks up a localized string similar to Deals 130% of the Thiefs Attack and 65% of his Agility in damage..
+        ///   Looks up a localized string similar to Deals 140% of the Thiefs Attack and 75% of his Agility in damage..
         /// </summary>
         internal static string AbilitiesDescriptionThiefPoisonedBlade {
             get {
@@ -1174,20 +1174,20 @@ namespace RPG.Properties {
         }
         
         /// <summary>
-        ///   Looks up a localized string similar to Version 0.1.3.17 (13/02-2014):
+        ///   Looks up a localized string similar to Version 0.1.4.3 (13/02-2014):
         ///
         ///	- General:
         ///		- The game was named! It is now called:
         ///
         ///					The Legend of Eiwar!
         ///
-        ///	- Classes:
-        ///		-Thief: &quot;Copycat&quot; was removed and replaced with &quot;Poisoned Blade&quot;:
-        ///			- Poisoned Blade: &quot;Deals 130% of the Thiefs Attack and 65% of his Agility in damage.&quot;
-        ///			- &quot;Borrow Weapon&quot; was changed: &quot;The Thief uses the best attack of his allies together with 
-        ///			  his own, dealing 85% (was 65%) of their combined damage.&quot;
-        ///		
-        ///_______________________________________________________ [rest of string was truncated]&quot;;.
+        ///		- A new game mode was added! You can now play with multiple of your characters against the computer!
+        ///		- The UI has not be rewamped completely, but certain elements have been significantly improved!
+        ///		- The bug with text being out of place has been fixed.
+        ///
+        ///	- Monsters:
+        ///		- Monster AI&apos;s were modified to take into account how many players it is battling against.
+        ///		- &quot;Desperation&quot; was [rest of string was truncated]&quot;;.
         /// </summary>
         internal static string ChangeLog {
             get {
@@ -1422,11 +1422,12 @@ namespace RPG.Properties {
         ///
         ///	- Finish up the support tab with facts about the game and instructions on how to play.
         ///
-        ///	- I have an idea of how to save data on the server, rendering local copies useless.
-        ///		- Simply name each .xml file after the user and check that there&apos;s only 1 of 
-        ///		  that user name. Then save these files in a &apos;&apos;Data&apos;&apos; folder on the server.
+        ///	- Use the last &quot;Support&quot; button to  open the webpage for bug reporting.
         ///
-        ///	- Fix bugs and balance cl [rest of string was truncated]&quot;;.
+        ///	- Add &quot;Zones&quot; where the player can battle in.
+        ///
+        ///	- I have an idea of how to save data on the server, rendering local copies useless.
+        ///		- Simply name each .xml file after the user and check that t [rest of string was truncated]&quot;;.
         /// </summary>
         internal static string Upcomming {
             get {
